--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "webpack-dev-server": "^2.9.4"
   },
   "dependencies": {
-    "babel-runtime": "^6.26.0"
+    "babel-runtime": "^6.26.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0"
   }
 }
